--- a/bill/templates/state/redesign/drafts/change_coat.html
+++ b/bill/templates/state/redesign/drafts/change_coat.html
@@ -10,7 +10,7 @@
 
 <!--новый герб государства-->
 <div class="gover__newInner ChangeCoat active">
-    <h2>Новый герб государства:</h2>
+    <h2>{% trans 'Новый герб государства' context "change_coat_draft" %}:</h2>
     <div class="party__mana-ava-block">
 
 		{% with state=data|dict_key:'state' %}
