--- a/bill/templates/state/redesign/drafts/change_residency.html
+++ b/bill/templates/state/redesign/drafts/change_residency.html
@@ -54,6 +54,6 @@
                 <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
             </g>
         </svg>
-        <span>предложить</span>
+        <span>{% trans 'предложить' context "bill_draft" %}</span>
     </button>
 </div>
