--- a/bill/templates/state/redesign/drafts/change_title.html
+++ b/bill/templates/state/redesign/drafts/change_title.html
@@ -2,6 +2,7 @@
 {% load get_attr %}
 {% load get_sum %}
 {% load get_key_list %}
+{% load l10n %}{% load i18n %}
 <!--переименование государства-->
 <div class="gover__newInner ChangeTitle">
     <h2>Новое название государства</h2>
@@ -20,6 +21,6 @@
                 <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
             </g>
         </svg>
-        <span>предложить</span>
+        <span>{% trans 'предложить' context "bill_draft" %}</span>
     </button>
 </div>
