--- a/bill/templates/state/redesign/drafts/transfer_region.html
+++ b/bill/templates/state/redesign/drafts/transfer_region.html
@@ -104,7 +104,7 @@
                 <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
             </g>
         </svg>
-        <span>предложить</span>
+        <span>{% trans 'предложить' context "bill_draft" %}</span>
     </button>
     {% else %}
     <h3>Нет доступных регионов</h3>
