--- a/bill/templates/state/redesign/drafts/change_title.html
+++ b/bill/templates/state/redesign/drafts/change_title.html
@@ -5,7 +5,7 @@
 {% load l10n %}{% load i18n %}
 <!--переименование государства-->
 <div class="gover__newInner ChangeTitle">
-    <h2>Новое название государства</h2>
+    <h2>{% trans 'Новое название государства' context "change_title_draft" %}</h2>
     <label class="gover__newInner-wideInput">
         <input id="change_title_new_title" name="new_title" maxlength="50" type="text">
     </label>
