--- a/bill/templates/state/redesign/drafts/martial_law.html
+++ b/bill/templates/state/redesign/drafts/martial_law.html
@@ -13,7 +13,7 @@
         <div class="ct__selectWithImage-selected" id="martial_law_default_region" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
             <img id="explore_resources_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
             <div class="ct__selectWithImage-firstText">
-                <span id="explore_resources_default_reg">{% trans region.region_name context "regions_list" %}</span>
+                <span id="explore_resources_default_reg">{{ region.region_name }}</span>
                 <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
                 </svg>
@@ -25,7 +25,7 @@
             {% for region in regions %}
             <div id="explore_resources_{% localize off %}{{ region.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="region_storage"{% endif %} data-func="set_explore_val" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
                 <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
-                <span class="offer_dummy_region">{% trans region.region_name context "regions_list" %}</span>
+                <span class="offer_dummy_region">{{ region.region_name }}</span>
             </div>
             {% endfor %}
         </div>
@@ -34,8 +34,8 @@
 
     <label class="ct__wide-modal-label-select">
         <select name="martial_law_mode" id="martial_law_mode">
-            <option id="martial_law_mode_set" value="set">Военное положение</option>
-            <option id="martial_law_mode_free" selected value="free">Снятие ограничений</option>
+            <option id="martial_law_mode_set" value="set">{% trans 'Военное положение' context "martial_law_draft" %}</option>
+            <option id="martial_law_mode_free" selected value="free">{% trans 'Снятие ограничений' context "martial_law_draft" %}</option>
         </select>
         <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
