--- a/bill/templates/state/redesign/drafts/start_war.html
+++ b/bill/templates/state/redesign/drafts/start_war.html
@@ -13,7 +13,7 @@
         <div class="ct__selectWithImage-selected" id="start_war_default_region" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
             <img id="start_war_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
             <div class="ct__selectWithImage-firstText">
-                <span id="start_war_default_reg">{% trans region.region_name context "regions_list" %}</span>
+                <span id="start_war_default_reg">{{ region.region_name }}</span>
                 <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
                 </svg>
@@ -25,7 +25,7 @@
             {% for region in regions %}
             <div id="start_war_{% localize off %}{{ region.pk }}{% endlocalize %}" data-func="set_victims" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
                 <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
-                <span class="offer_dummy_region">{% trans region.region_name context "regions_list" %}</span>
+                <span class="offer_dummy_region">{{ region.region_name }}</span>
             </div>
             {% endfor %}
         </div>
@@ -42,7 +42,7 @@
         <div class="ct__selectWithImage-selected" id="start_war_default_victim" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
             <img id="start_war_vic_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
             <div class="ct__selectWithImage-firstText">
-                <span id="start_war_vic_default_reg">{% trans region.region_name context "regions_list" %}</span>
+                <span id="start_war_vic_default_reg">{{ region.region_name }}</span>
                 <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
                 </svg>
@@ -56,7 +56,7 @@
             {% for region in regions|dict_key:agr %}
             <div id="start_war_vic_{% localize off %}{{ region.pk }}{% endlocalize %}" class="victim_line" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}" {% if not agr == first %}style="display: none"{% endif %}>
                 <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
-                <span class="offer_dummy_region">{% trans region.region_name context "regions_list" %}</span>
+                <span class="offer_dummy_region">{{ region.region_name }}</span>
             </div>
             {% endfor %}
             {% endfor %}
@@ -109,7 +109,7 @@
     </script>
         {% else %}
 
-        <b>нет общих границ</b>
+        <b>{% trans 'нет общих границ' context "start_war_draft" %}</b>
             {% endif %}
         {% endwith %}
     {% endwith %}
