--- a/bill/templates/state/redesign/drafts/transfer_region.html
+++ b/bill/templates/state/redesign/drafts/transfer_region.html
@@ -15,7 +15,7 @@
         <div class="ct__selectWithImage-selected" id="transfer_region_default_region" data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
             <img id="transfer_region_default_img" src="/static/img/regions/{{ region.on_map_id }}.png">
             <div class="ct__selectWithImage-firstText">
-                <span id="transfer_region_default_reg">{% trans region.region_name context "regions_list" %}</span>
+                <span id="transfer_region_default_reg">{{ region.region_name }}</span>
                 <svg class="ct__selectWithImage-arrow" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
                 </svg>
@@ -27,7 +27,7 @@
             {% for region in regions %}
             <div id="transfer_region_{% localize off %}{{ region.pk }}{% endlocalize %}" {% if forloop.counter0 == 0 %}class="region_storage"{% endif %} data-value="{% localize off %}{{ region.pk }}{% endlocalize %}">
                 <img class="offer_dummy_img" src="/static/img/regions/{{ region.on_map_id }}.png">
-                <span class="offer_dummy_region">{% trans region.region_name context "regions_list" %}</span>
+                <span class="offer_dummy_region">{{ region.region_name }}</span>
             </div>
             {% endfor %}
         </div>
@@ -107,7 +107,7 @@
         <span>{% trans 'предложить' context "bill_draft" %}</span>
     </button>
     {% else %}
-    <h3>Нет доступных регионов</h3>
+    <h3>{% trans 'Нет доступных регионов' context "transfer_region_draft" %}</h3>
     {% endif %}
     {% endwith %}
 </div>
