--- a/bill/templates/state/redesign/bills.html
+++ b/bill/templates/state/redesign/bills.html
@@ -15,18 +15,18 @@
 
             <tr style="display: none">
                 <td>
-                    <p>объявление войны</p>
+                    <p>{% trans 'объявление войны' context "bills_reviewed" %}</p>
                     <p style="font-weight: 700;">10.06.2023 16:36</p>
                 </td>
                 <td>
                     <div class="gover__withImage">
                         <img src="img/gerb.png" alt="">
-                        <span>Саксония-Анхальт</span>
+                        <span>{% trans 'Саксония-Анхальт' context "bills_reviewed" %}</span>
                     </div>
                 </td>
                 <!--видно на только пк-->
                 <td class="gover__tableDopInfo">
-                    <span>наземная</span>
+                    <span>{% trans 'наземная' context "bills_reviewed" %}</span>
                 </td>
                 <!--видно на только пк-->
                 <td class="gover__tableCancel">
