--- a/bill/templates/state/redesign/reviewed/change_coat.html
+++ b/bill/templates/state/redesign/reviewed/change_coat.html
@@ -22,10 +22,10 @@
         {% if bill.image %}
         <div class="gover__withImage">
             <img src="{{ bill.image.url }}">
-            <a href='{{ bill.image.url }}' target="_blank">оригинальный размер</a>
+            <a href='{{ bill.image.url }}' target="_blank">{% trans 'оригинальный размер' context "change_coat_reviewed" %}</a>
         </div>
         {% else %}
-        <span>недоступно</span>
+        <span>{% trans 'недоступно' context "change_coat_reviewed" %}</span>
         {% endif %}
     </td>
 
