--- a/bill/templates/state/redesign/reviewed/change_taxes.html
+++ b/bill/templates/state/redesign/reviewed/change_taxes.html
@@ -27,7 +27,7 @@
             {% else %}
             <img src="{% static 'img/congress.svg' %}" onclick="window.location.href = 'state/{{ bill.parliament.state.pk }}/'" style="cursor: pointer;">
             {% endif %}
-            <span>всё государство</span>
+            <span>{% trans 'всё государство' context "change_taxes_reviewed" %}</span>
         </div>
         {% else %}
         <div class="gover__withImage">
@@ -55,11 +55,11 @@
     <td class="gover__tableVote">
         <div class="gover__tableVote-wrappper">
             {% if bill.type == 'ac' %}
-            <p>принят</p>
+            <p>{% trans 'принят' context "change_taxes_reviewed" %}</p>
             {% elif bill.type == 'rj' %}
-            <p>отклонён</p>
+            <p>{% trans 'отклонён' context "change_taxes_reviewed" %}</p>
             {% elif bill.type == 'cn' %}
-            <p>отменён</p>
+            <p>{% trans 'отменён' context "change_taxes_reviewed" %}</p>
             {% endif %}
 
             <p><span>{{ bill.votes_pro.all.count }}</span><span>{{ bill.votes_con.all.count }}</span></p>
