--- a/bill/templates/state/redesign/reviewed/transfer_resources.html
+++ b/bill/templates/state/redesign/reviewed/transfer_resources.html
@@ -38,7 +38,7 @@
     <!--видно на только пк-->
     <td class="gover__tableDopInfo">
         <span>
-            {% trans 'Наличные' context "goods" %}: {{ bill.cash_cost }}
+            {% trans 'Наличные' context "transfer_resources_reviewed" %}: {{ bill.cash_cost }}
         </span>
     </td>
 
@@ -51,11 +51,11 @@
     <td class="gover__tableVote">
         <div class="gover__tableVote-wrappper">
             {% if bill.type == 'ac' %}
-            <p>принят</p>
+            <p>{% trans 'принят' context "transfer_resources_reviewed" %}</p>
             {% elif bill.type == 'rj' %}
-            <p>отклонён</p>
+            <p>{% trans 'отклонён' context "transfer_resources_reviewed" %}</p>
             {% elif bill.type == 'cn' %}
-            <p>отменён</p>
+            <p>{% trans 'отменён' context "transfer_resources_reviewed" %}</p>
             {% endif %}
 
             <p><span>{{ bill.votes_pro.all.count }}</span><span>{{ bill.votes_con.all.count }}</span></p>
